# ruvu_carrot_local_planner

./: .gitlab-ci.yml  LICENSE
ruvu_carrot_local_planner/: CHANGELOG.rst  CMakeLists.txt  README.md  blp_plugin.xml  licence.txt  package.xml  plugins.xml
ruvu_carrot_local_planner/cfg/: CarrotPlanner.cfg
ruvu_carrot_local_planner/doc/: slow_down_margin.html  slow_down_margin.ipynb
ruvu_carrot_local_planner/src/: carrot_planner.cpp  carrot_planner.h  carrot_planner.hpp  carrot_planner_ros.cpp  carrot_planner_ros.h  carrot_planner_ros.hpp  geometry_utils.hpp  latched_stop_rotate_controller.cpp  latched_stop_rotate_controller.h  latched_stop_rotate_controller.hpp  local_planner_limits.cpp  local_planner_limits.h  local_planner_util.cpp  local_planner_util.h  local_planner_util.hpp  parameter_magic.h  simulator.cpp  simulator.h  simulator.hpp  utils.cpp  utils.h
ruvu_carrot_local_planner/test/: test_geometry_utils.cpp  test_utils.cpp
turtlebot3_carrot_planner/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
turtlebot3_carrot_planner/launch/: navigation_amcl.launch  rviz.launch
turtlebot3_carrot_planner/launch/includes/: move_base_flex.launch.xml
turtlebot3_carrot_planner/param/: carrot_local_planner_params_burger.yaml  config.rviz  global_planner_params.yaml  move_base.yaml
turtlebot_carrot_planner/: CMakeLists.txt  README.md  package.xml
turtlebot_carrot_planner/launch/: navigation_amcl.launch  rviz.launch
turtlebot_carrot_planner/launch/includes/: move_base_flex.launch.xml
