<?xml version="1.0"?>
<package format="2">
  <name>ruvu_carrot_local_planner</name>
  <version>0.0.1</version>
  <description>
  This package implements a carrot planner based local planner according to the BaseLocalPlanner interface specified in the <a href="http://wiki.ros.org/nav_core">nav_core</a> package.
  </description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <export>
    <nav_core plugin="${prefix}/blp_plugin.xml" />
  </export>
</package>
