<?xml version="1.0"?>
<package format="2">
  <name>ruvu_carrot_local_planner</name>
  <version>0.0.1</version>
  <description>ruvu_carrot_local_planner implements a carrot planner based local planner according to the mbf_costmap_core::CostmapController interface specified in the <a href="http://wiki.ros.org/mbf_costmap_core">mbf_costmap_core</a> package.
  </description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>mbf_costmap_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>ruvu_lint</test_depend>

  <export>
    <mbf_costmap_core plugin="${prefix}/plugins.xml" />
  </export>
</package>
