<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_carrot_planner</name>
  <version>0.0.0</version>
  <description>Demonstrates the carrot planner running on a turtlebot in simulation.</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
