<?xml version="1.0"?>
<!--
Copyright 2020 RUVU Robotics B.V.
-->

<package format="2">
  <name>turtlebot3_carrot_planner</name>
  <version>1.0.0</version>
  <description>Demonstrates the carrot planner running on a turtlebot in simulation.</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>map_server</exec_depend>
  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>

  <test_depend>ruvu_lint</test_depend>
</package>
